Fixed styling issue with user answer and answer left aligned

--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ button {
     padding: 0px;
     background-color: white;
     border-radius: 10px;
+    padding-left: 0.25rem
 }
 
 .div-width {
